[package]
name = "js2scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxc_allocator = "0.2.0"
oxc_ast = "0.2.0"
oxc_parser = "0.2.0"
oxc_semantic = "0.2.0"
oxc_span = "0.2.0"
oxc_syntax = "0.2.0"
